code refactoring
- add new class exception OperationUnknownException