@@ -4,15 +4,15 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class Setting {
-    public static final String PROJECT_DIRECTORY = Path.of("").toAbsolutePath().toString();
-    public static final Path RESOURCES_PATH =
-            Paths.get(PROJECT_DIRECTORY, "src", "main", "resources");
-    public static final Path INPUT_FILE_NAME = RESOURCES_PATH.resolve("fruit-log.csv");
-    public static final Path OUTPUT_FILE_NAME = RESOURCES_PATH.resolve("fruit-stat.csv");
-    public static final String FILE_HEADER_INPUT = "type,fruit,quantity";
-    public static final String FILE_HEADER_OUTPUT = "fruit,quantity";
-    public static final String FILE_LINE_SEPARATOR = ",";
-    public static final int INDEX_OPERATION = 0;
-    public static final int INDEX_PRODUCT = 1;
-    public static final int INDEX_QUANTITY = 2;
+    public static final Path DIRECTORY_PROJECT = Path.of("").toAbsolutePath();
+    public static final Path DIRECTORY_RESOURCES =
+            Paths.get(DIRECTORY_PROJECT.toString(), "src", "main", "resources");
+    public static final Path FILE_NAME_INPUT = DIRECTORY_RESOURCES.resolve("fruit-log.csv");
+    public static final Path FILE_NAME_OUTPUT = DIRECTORY_RESOURCES.resolve("fruit-stat.csv");
+    public static final String HEADER_FILE_INPUT = "type,fruit,quantity";
+    public static final String HEADER_FILE_OUTPUT = "fruit,quantity";
+    public static final String FIELDS_DELIMITER_IN_FILE = ",";
+    public static final int INDEX_FOR_OPERATION = 0;
+    public static final int INDEX_FOR_PRODUCT = 1;
+    public static final int INDEX_FOR_QUANTITY = 2;
 }
